# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "slab"
version = "0.0.1"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Slab Allocator"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.1" }
bitmap = { git = "https://github.com/nanvix/bitmap", branch = "releases/v0.0.1" }
raw-array = { git = "https://github.com/nanvix/raw-array", branch = "releases/v0.0.1" }
